# LocalDataManager

./: .gitignore  LICENSE  README.md  pyproject.toml  sqlite_testing.ipynb  tinkering.ipynb
.github/workflows/: publish-to-pypi.yml
Data_Management/: file_manager.py
examples/: examples.ipynb
src/LocalDataManager/: file_manager.py
src/LocalDataManager/db/: db_classes.py
test/: test_file_management.py  test_processing.py
