[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LocalDataManager"
version = "0.0.4"
authors = [
  { name="Blaine Perry", email="blainecperry@gmail.com" },
]
description = "A package for facilitating local file management"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas"
]
[project.urls]
Homepage = "https://github.com/bcperry/LocalDataManager"
Issues = "https://github.com/bcperry/LocalDataManager/issues"